@@ -70,34 +70,26 @@ import org.hotswap.agent.javassist.bytecode.Descriptor;
  * @see javassist.ClassPath
  */
 public class ClassPool {
-    // used by toClass().
-    private static java.lang.reflect.Method defineClass1, defineClass2;
-    private static java.lang.reflect.Method definePackage;
+    private static java.lang.reflect.Method definePackage = null;
 
     static {
-        try {
-            AccessController.doPrivileged(new PrivilegedExceptionAction(){
-                public Object run() throws Exception{
-                    Class cl = Class.forName("java.lang.ClassLoader");
-                    defineClass1 = cl.getDeclaredMethod("defineClass",
-                            new Class[] { String.class, byte[].class,
-                                         int.class, int.class });
-
-                    defineClass2 = cl.getDeclaredMethod("defineClass",
-                           new Class[] { String.class, byte[].class,
-                                 int.class, int.class, ProtectionDomain.class });
-
-                    definePackage = cl.getDeclaredMethod("definePackage",
-                            new Class[] { String.class, String.class, String.class,
-                                          String.class, String.class, String.class,
-                                          String.class, java.net.URL.class });
-                    return null;
-                }
-            });
-        }
-        catch (PrivilegedActionException pae) {
-            throw new RuntimeException("cannot initialize ClassPool", pae.getException());
-        }
+        if (ClassFile.MAJOR_VERSION < ClassFile.JAVA_9)
+            try {
+                AccessController.doPrivileged(new PrivilegedExceptionAction(){
+                    public Object run() throws Exception{
+                        Class cl = Class.forName("java.lang.ClassLoader");
+                        definePackage = cl.getDeclaredMethod("definePackage",
+                                new Class[] { String.class, String.class, String.class,
+                                        String.class, String.class, String.class,
+                                        String.class, java.net.URL.class });
+                        return null;
+                    }
+                });
+            }
+            catch (PrivilegedActionException pae) {
+                throw new RuntimeException("cannot initialize ClassPool",
+                                           pae.getException());
+            }
     }
 
     /**
@@ -220,7 +212,8 @@ public class ClassPool {
      * </pre>
      *
      * <p>If the default class pool cannot find any class files,
-     * try <code>ClassClassPath</code> and <code>LoaderClassPath</code>.
+     * try <code>ClassClassPath</code>, <code>ModuleClassPath</code>,
+     * or <code>LoaderClassPath</code>.
      *
      * @see ClassClassPath
      * @see LoaderClassPath
@@ -323,7 +316,7 @@ public class ClassPool {
     }
 
     /**
-     * Returns all the package names recorded by <code>importPackage()</code>. 
+     * Returns all the package names recorded by <code>importPackage()</code>.
      *
      * @see #importPackage(String)
      * @since 3.1
@@ -496,7 +489,7 @@ public class ClassPool {
      * that classname can be an array-type "descriptor" (an encoded
      * type name) such as <code>[Ljava/lang/Object;</code>.
      *
-     * <p>Using this method is not recommended; this method should be 
+     * <p>Using this method is not recommended; this method should be
      * used only to obtain the <code>CtClass</code> object
      * with a name returned from <code>getClassInfo</code> in
      * <code>javassist.bytecode.ClassPool</code>.  <code>getClassInfo</code>
@@ -560,7 +553,7 @@ public class ClassPool {
      * @return null if the class file could not be found.
      */
     protected CtClass createCtClass(String classname, boolean useCache) {
-        // accept "[L<class name>;" as a class name. 
+        // accept "[L<class name>;" as a class name.
         if (classname.charAt(0) == '[')
             classname = Descriptor.toClassName(classname);
 
@@ -871,7 +864,7 @@ public class ClassPool {
      */
     synchronized CtClass makeNestedClass(String classname) {
         checkNotFrozen(classname);
-        CtClass clazz = new CtNewNestedClass(classname, this, false, null);
+        CtClass clazz = new CtNewClass(classname, this, false, null);
         cacheCtClass(classname, clazz, true);
         return clazz;
     }
@@ -912,7 +905,7 @@ public class ClassPool {
      * the new interface overwrites that previous one.
      *
      * @param name      a fully-qualified interface name.
-     *                  Or null if the annotation has no super interface. 
+     *                  Or null if the annotation has no super interface.
      * @throws RuntimeException if the existing interface is frozen.
      * @since 3.19
      */
@@ -1047,8 +1040,8 @@ public class ClassPool {
      * allowed any more.
      * To load the class, this method uses the context class loader
      * of the current thread.  It is obtained by calling
-     * <code>getClassLoader()</code>.  
-     * 
+     * <code>getClassLoader()</code>.
+     *
      * <p>This behavior can be changed by subclassing the pool and changing
      * the <code>getClassLoader()</code> method.
      * If the program is running on some application
@@ -1068,15 +1061,15 @@ public class ClassPool {
     public Class toClass(CtClass clazz) throws CannotCompileException {
         // Some subclasses of ClassPool may override toClass(CtClass,ClassLoader).
         // So we should call that method instead of toClass(.., ProtectionDomain).
-        return toClass(clazz, getClassLoader()); 
+        return toClass(clazz, getClassLoader());
     }
 
     /**
      * Get the classloader for <code>toClass()</code>, <code>getAnnotations()</code> in
      * <code>CtClass</code>, etc.
-     * 
+     *
      * <p>The default is the context class loader.
-     * 
+     *
      * @return the classloader for the pool
      * @see #toClass(CtClass)
      * @see CtClass#getAnnotations()
@@ -1084,10 +1077,10 @@ public class ClassPool {
     public ClassLoader getClassLoader() {
         return getContextClassLoader();
     }
-    
+
     /**
      * Obtains a class loader that seems appropriate to look up a class
-     * by name. 
+     * by name.
      */
     static ClassLoader getContextClassLoader() {
         return Thread.currentThread().getContextClassLoader();
@@ -1147,43 +1140,11 @@ public class ClassPool {
         throws CannotCompileException
     {
         try {
-            byte[] b = ct.toBytecode();
-            java.lang.reflect.Method method;
-            Object[] args;
-            if (domain == null) {
-                method = defineClass1;
-                args = new Object[] { ct.getName(), b, new Integer(0),
-                                      new Integer(b.length)};
-            }
-            else {
-                method = defineClass2;
-                args = new Object[] { ct.getName(), b, new Integer(0),
-                    new Integer(b.length), domain};
-            }
-
-            return (Class)toClass2(method, loader, args);
+            return org.hotswap.agent.javassist.util.proxy.DefineClassHelper.toClass(ct.getName(),
+                    loader, domain, ct.toBytecode());
         }
-        catch (RuntimeException e) {
-            throw e;
-        }
-        catch (java.lang.reflect.InvocationTargetException e) {
-            throw new CannotCompileException(e.getTargetException());
-        }
-        catch (Exception e) {
+        catch (IOException e) {
             throw new CannotCompileException(e);
-        }
-    }
-
-    private static synchronized Object toClass2(Method method,
-            ClassLoader loader, Object[] args)
-        throws Exception
-    {
-        method.setAccessible(true);
-        try {
-            return method.invoke(loader, args);
-        }
-        finally {
-            method.setAccessible(false);
         }
     }
 
@@ -1192,9 +1153,15 @@ public class ClassPool {
      * performs nothing.
      *
      * <p>You do not necessarily need to
-     * call this method.  If this method is called, then  
-     * <code>getPackage()</code> on the <code>Class</code> object returned 
-     * by <code>toClass()</code> will return a non-null object.
+     * call this method.  If this method is called, then
+     * <code>getPackage()</code> on the <code>Class</code> object returned
+     * by <code>toClass()</code> will return a non-null object.</p>
+     *
+     * <p>The jigsaw module introduced by Java 9 has broken this method.
+     * In Java 9 or later, the VM argument
+     * <code>--add-opens java.base/java.lang=ALL-UNNAMED</code>
+     * has to be given to the JVM so that this method can run.
+     * </p>
      *
      * @param loader        the class loader passed to <code>toClass()</code> or
      *                      the default one obtained by <code>getClassLoader()</code>.
@@ -1203,15 +1170,19 @@ public class ClassPool {
      * @see #toClass(CtClass)
      * @see CtClass#toClass()
      * @since 3.16
+     * @deprecated
      */
     public void makePackage(ClassLoader loader, String name)
         throws CannotCompileException
     {
+        if (definePackage == null)
+            throw new CannotCompileException("give the JVM --add-opens");
+
         Object[] args = new Object[] {
                 name, null, null, null, null, null, null, null };
         Throwable t;
         try {
-            toClass2(definePackage, loader, args);
+            makePackage2(definePackage, loader, args);
             return;
         }
         catch (java.lang.reflect.InvocationTargetException e) {
@@ -1229,5 +1200,18 @@ public class ClassPool {
         }
 
         throw new CannotCompileException(t);
+    }
+
+    private static synchronized Object makePackage2(Method method,
+            ClassLoader loader, Object[] args)
+        throws Exception
+    {
+        method.setAccessible(true);
+        try {
+            return method.invoke(loader, args);
+        }
+        finally {
+            method.setAccessible(false);
+        }
     }
 }
